apps/PiHole/overlays/testing/00-pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  template:
    spec:
      containers:
      - name: pihole
        resources:
          requests: 
            cpu: "50m"
            memory: "60Mi"
          limits: 
            cpu: "56m"
            memory: "60Mi"
